# ai-accountability-infrastructure

./: .codecov.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE  MAINTAINERS.md  MAINTAINERS_GUIDE.md  MANIFEST.in  Makefile  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  THANKS  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  docker-compose.yml  mypy.ini  package-lock.json  package.json  project.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  validate-events.yml
app/: main.py
assets/: README.md
ci/: README.md
config/: default.toml  reason_codes.yaml  test_output.txt
configs/: README.md
docs/: Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  api.rst  conf.py  development.md  development.rst  getting-started.rst  index.rst  receipt_spec_v1.rst  verification_guide.md  wire-format.md
docs/adr/: 0001-repository-structure.md
docs/compliance/: provenance-audit-2025-10-26.md
examples/: basic_usage.py  client_example.py  demo.py  requirements.txt  test_cli.py
gatekeeper/: constants.py
infra/: README.md
jobs/: snapshot.py
keys/: README.md
sbom/: README.md
scripts/: README.md  bootstrap  bootstrap.ps1  build  build.ps1  check  check.ps1  clean  clean.ps1  coverage  coverage.ps1  dev  dev.ps1  e2e  e2e.ps1  fmt  fmt.ps1  gen-docs  gen-docs.ps1  lint  lint.ps1  migrate  migrate.ps1  package  package.ps1  release  release.ps1  sbom  sbom.ps1  security-scan  security-scan.ps1  test  test.ps1  typecheck  typecheck.ps1  update-deps  update-deps.ps1
scripts/legacy/: README.md  api.py  check_log.py  check_log_status.py  debug_receipt.py  dev_quickstart.sh  generate_test_keys.py  manage_log.py  start_log_server.py  submit_receipt.py  test_end_to_end.py  test_verify.py  visualize_tree.py
scripts/lib/: common.sh
src/ai_trust/: __init__.py  __main__.py
src/ai_trust/api/: __init__.py  main.py
src/ai_trust/cli/: __init__.py  commands.py  main.py  verify.py
src/ai_trust/core/: __init__.py  app.py  db.py  exceptions.py  merkle.py  receipt.py  verification.py
src/ai_trust/core/canonicalization/: __init__.py
src/ai_trust/core/crypto/: __init__.py
src/ai_trust/core/models/: __init__.py
src/ai_trust/services/log/: server.py
src/ai_trust/services/verifier/: README.md  __init__.py  pocket_verifier.py  verifier.py  verify.py
src/ai_trust/services/witness/: service.py
tests/: README.md
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tests/integration/performance/: test_merkle_performance.py
tests/unit/js/: receipt-schema.spec.js
tests/unit/schemas/: test_gatekeeper_event_schema.py  test_receipt_schema.py
tools/: add_spdx_headers.py  generate_keys.py  generate_receipt.py  pocket_verify.py  sign_receipt.py  synthetic.py  verify_receipt.py
(+18 files in other folders)
