# SPDX-License-Identifier: MPL-2.0
[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trust"
description = "AI Trust Infrastructure - A framework for transparent and verifiable AI operations"
readme = "README.md"
authors = [
    {name = "AI Trust Team", email = "team@aitrust.example.com"},
]
license = {text = "MPL-2.0"}
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

dependencies = [
    "cryptography>=41.0.0",
    "fastapi>=0.95.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "uvicorn[standard]>=0.21.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "requests>=2.31.0",
    "rich>=13.6.0",
    "pyjwt>=2.6.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.5.0",
    "jsonschema>=4.18.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
    "duckdb>=0.9.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.280",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pip-tools>=7.3.0",
    "pip-audit>=2.7.0",
    "cyclonedx-bom>=3.14.0",
]

server = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "aiosqlite>=0.19.0",
]

crypto = [
    "cryptography>=41.0.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "myst-parser>=0.15.0",
]

[project.scripts]
aitrust = "ai_trust.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 88
target-version = ['py39']
include = '\\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B", "C4", "UP", "N", "RUF", "A", "C90", "FBT", "I", "ICN", "ISC", "N", "PIE", "PYI", "RET", "SIM", "TCH", "TID", "TRY", "YTT"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
no_implicit_reexport = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
